--- a/manifest.in
+++ b/manifest.in
@@ -2,3 +2,4 @@ include README.md
 include LICENSE
 recursive-include ui *.ui *.css
 recursive-include screenshots *.png
+recursive-include graphenegui/ui/img *
